# rust_init

./: .env  .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  post.rs  prelude.rs  users.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250104_144054_create_user_table.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  post_handler.rs  user_handler.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: constants.rs
