[package]
name = "rust_hello"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.9.0"
serde = "1.0.217"
serde_json = "1.0.134"
env_logger = "0.11.6"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "1.1.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.5.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.23.0"
actix-multipart = "0.7.2"
sanitize-filename = "0.6.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]